--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,7 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
+
+LAT=50.0000
+LON=5.0000
+ASL=100
