--- a/examples/compose/symfony.conf
+++ b/examples/compose/symfony.conf
@@ -6,6 +6,8 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
+    rewrite ^/interface/api.php http://weather.loxone.com/interface/api redirect;
+
     location ~ ^/index\.php(/|$) {
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
