adding openweathermap support since weatherbit removed hourly forcasts from the free tier

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,6 @@ services:
 
     App\WeatherProvider\Weatherbit:
         arguments: ['%env(WEATHERBIT_KEY)%']
+
+    App\WeatherProvider\OpenWeatherMap:
+        arguments: ['%env(OPENWEATHERMAP_KEY)%']
