--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ APP_SECRET=6448226204288bdb109803f3976531c4
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+
+WEATHERBIT_KEY=
+OPENWEATHERMAP_KEY=
