--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -3,5 +3,6 @@ services:
     arguments:
       - "@App\\LocationProvider\\LocationProvider"
       - "@App\\WeatherProvider\\Weatherbit"
+      - "@App\\WeatherProvider\\OpenWeatherMap"
       - "@logger"
     public: true
