--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -15,6 +15,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+
     strategy:
       fail-fast: true
       matrix:
