--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -15,10 +15,16 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+
     strategy:
       fail-fast: true
       matrix:
-        php-versions: ['7.3', '7.4', '8.0']
+        php-versions: ['7.4', '8.0']
 
     steps:
       - name: Setup PHP
@@ -71,6 +77,7 @@ jobs:
       - name: Run phpunit
         env:
           WEATHERBIT_KEY: ${{ secrets.WEATHERBIT_KEY }}
+          REDIS_URL: "redis://localhost:6379"
         run: ./vendor/bin/simple-phpunit --coverage-clover build/logs/clover.xml
 
       - name: Upload coverage results to Coveralls
