--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "doctrine/annotations": "^1.11",
+        "predis/predis": "^1.1",
+        "symfony/cache": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
@@ -71,7 +73,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.1.*"
+            "require": "5.4.*"
         }
     }
 }
