--- a/.env
+++ b/.env
@@ -14,10 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_SECRET=6448226204288bdb109803f3976531c4
-#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-#TRUSTED_HOSTS='^(localhost|example\.com)$'
+APP_ENV=dev
+APP_SECRET=c86f5235042b93b04334e227d900d15b
 ###< symfony/framework-bundle ###
 
 
