--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,17 @@
         "ext-json": "*",
         "doctrine/annotations": "^1.11",
         "predis/predis": "^1.1",
-        "symfony/cache": "5.4.*",
-        "symfony/console": "5.4.*",
-        "symfony/dotenv": "5.4.*",
+        "symfony/cache": "6.0.*",
+        "symfony/console": "6.0.*",
+        "symfony/dotenv": "6.0.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.3.*",
-        "symfony/http-client": "5.4.*",
+        "symfony/framework-bundle": "6.0.*",
+        "symfony/http-client": "6.0.*",
         "symfony/monolog-bundle": "^3.6",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan": "^0.12.58",
         "symfony/browser-kit": "5.4.*",
         "symfony/maker-bundle": "^1.24",
@@ -73,7 +74,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.0.*"
         }
     }
 }
