--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/framework-bundle": "6.0.*",
         "symfony/http-client": "6.0.*",
         "symfony/monolog-bundle": "^3.6",
+        "symfony/runtime": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
@@ -33,7 +34,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "symfony/runtime": true
         }
     },
     "autoload": {
