--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,10 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
         
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
@@ -29,7 +33,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        
+      
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
