Don't set env variables to empty

--- a/.env
+++ b/.env
@@ -19,6 +19,6 @@ APP_SECRET=c86f5235042b93b04334e227d900d15b
 ###< symfony/framework-bundle ###
 
 
-WEATHERBIT_KEY=
-OPENWEATHERMAP_KEY=
-REDIS_URL=
+#WEATHERBIT_KEY=
+#OPENWEATHERMAP_KEY=
+#REDIS_URL=
