Test for php 8.1

--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php-versions: ['8.0']
+        php-versions: ['8.0','8.1']
 
     steps:
       - name: Setup PHP
